# SpatialCore

./: .gitignore  CLAUDE.md  README  README.md  mkdocs.yml  pyproject.toml  tmpclaude-a64d-cwd
.github/workflows/: claude.yml  docs.yml  publish-pypi.yml  sync-public.yml
docs/: CELLTYPIST_MODELS.md  CELLTYPIST_PIPELINE_SPECIFICATION.md  CELLXGENE_REFERENCE_DATA.md  DOMAINS.md  HIERATYPE_PIPELINE_SPECIFICATION.md  MULTIVARIATE_CLASSIFIER_STANDALONE.md  MULTIVARIATE_THRESHOLDING.md  ONTOLOGY_MAPPING_RESEARCH.md  OPEN_TARGETS_STANDALONE_GUIDE.md  SPATIAL_AUTOCORRELATION_GUIDE.md  celltypist_training.py  index.md  multivariate_classifier.py  setup_repo
docs/celltyping/: CELLTYPING_PIPELINE_GUIDE.md  api.md  benchmarks.md  index.md  pipeline.md  validation.md
docs/celltyping/images/: .gitkeep
docs/domains/: domain_detection.md  index.md  neighborhood_analysis.md
docs/javascripts/: mathjax.js
docs/r_bridge/: index.md
docs/spatial/: index.md  spatial_stats.md
docs/stylesheets/: extra.css
docs/thresholding/: cell_classifier.md  index.md
reports/: _quarto.yml
reports/clustering/: clustering_template.qmd
reports/domains/: domains_template.qmd
reports/spatial/: spatial_template.qmd
src/spatialcore/: __init__.py
src/spatialcore/annotation/: __init__.py  acquisition.py  annotate.py  cellxgene.py  confidence.py  ontology.py  patterns.py  pipeline.py  training.py  validation.py
src/spatialcore/clustering/: __init__.py
src/spatialcore/core/: __init__.py  logging.py  metadata.py  utils.py
src/spatialcore/data/gene_mappings/: ensembl_to_hugo_human.tsv
src/spatialcore/data/ontology_mappings/: ontology_index.json
src/spatialcore/diffusion/: __init__.py
src/spatialcore/nmf/: __init__.py
src/spatialcore/ontology/: __init__.py
src/spatialcore/plotting/: __init__.py  confidence.py  spatial.py  validation.py
src/spatialcore/r_bridge/: __init__.py  subprocess_runner.py
src/spatialcore/spatial/: __init__.py  autocorrelation.py  domains.py  neighborhoods.py  r_functions.R
src/spatialcore/stats/: _thresholding.py  classify.py
tests/: __init__.py  conftest.py  test_runner.py  tests.yaml
tests/fixtures/: .gitkeep
