[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatialcore"
version = "0.1.0"
description = "Standardized spatial statistics tools for computational biology"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "SpatialCore Contributors"}
]
keywords = [
    "spatial-transcriptomics",
    "single-cell",
    "bioinformatics",
    "scanpy",
    "squidpy",
    "xenium",
    "cosmx",
    "visium"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "anndata>=0.10.0",
    "scanpy>=1.9.0",
    "squidpy>=1.3.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
celltypist = [
    "celltypist>=1.6.0",
]
r = [
    "rpy2>=3.5.0",
]
parallel = [
    "numba>=0.56.0",
]
all = [
    "spatialcore[celltypist,r,parallel]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/spatialcore/spatialcore"
Documentation = "https://spatialcore.github.io/spatialcore"
Repository = "https://github.com/spatialcore/spatialcore"
Issues = "https://github.com/spatialcore/spatialcore/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["spatialcore.internal*"]

[tool.setuptools.package-data]
spatialcore = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=spatialcore"
